2014-05-05  Ivan Vucica <ivan@vucica.net>

	* ChangeLog: Corrected year for some recent commits.
	* GNUmakefile: Added use of Master/deb.make.
	* gnustep-back.spec.in: Added some details needed for Debian
	packaging.

2014-01-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (LoadDisplayMonitorInfo):
	Switch monitor logging to Debug level.
	Patch by Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

2014-01-19  Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/blit.m(MPRE): Remove compiler warning.
	* Source/art/image.m(-DPSimage:::::::::::): Correct parameter
	types. Fixes bug #41274.

2014-01-08  Fred Kiefer <FredKiefer@gmx.de>

	* configure: Remove duplicate addition of Xext.
	* configure.ac: Regenerate.

2014-01-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/x11/XGServerWindow.m: Remove redundant method.

2014-01-05  Fred Kiefer <FredKiefer@gmx.de>

        * Source/x11/XGServerWindow.m(-_checkStyle:): Change NSLog into NSDebugLLog.

2014-01-01 Niels Grewe <niels.grewe@halbordnung.de>

        * Source/x11/XGServerWindow.m: Implement method to get
	the XWindow ID of the a window from its window number.

2013-12-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-GSSetFont:),
	* Source/cairo/CairoFaceInfo.m (-drawGlyphs:...): Use scaled font directly.

2013-12-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m
	* Source/xlib/XGFontManager.m
	* Source/xlib/XGBitmap.m: Remove some compiler warnings.

2013-12-24  Richard Frith-Macdonald <rfm@gnu.org>

        * Version: bump to 0.24.0

2013-12-23  Fred Kiefer <FredKiefer@gmx.de>

        * Update release notes to prepare for upcoming release.

2013-12-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFaceInfo.m (-fontFace): Warn about the usage
	of non-scalable fonts.

2013-12-18  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_createBuffer, -windowbacking::,
	-setWindowdevice:forContext:): Move code from last patch around a bit.