@@ -1,3 +1,8 @@
+2014-05-06  Ivan Vucica <ivan@vucica.net>
+
+	* Tools/gpbs.m: Removed barely used, overly complex and almost
+	certainly buggy logging code.
+	
 2014-05-05  Ivan Vucica <ivan@vucica.net>
 
 	* ChangeLog: Corrected year for some recent commits.
